# tdd_bdd_realtime_service

./: .gitignore  Makefile  README.md  pyproject.toml  tox.ini  tox_clean_env.py
docs/: modules.rst  python_package.rst
docs/source/: conf.py  index.rst
src/python_package/: calculator.py
tests/python_package/: test_calculator.py
