[tool.poetry]
name = "pythontemplatestructure"
version = "0.1.0"
description = ""
authors = ["Duany Baró Menéndez <duany.baromenendez@ukg.com>"]
readme = "README.md"
packages = [{include = "python_package", from="src"}]

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^8.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
tox = "^4.18.0"
pytest-sugar = "^1.0.0"
pytest-cov = "^5.0.0"
black = "^24.8.0"
mypy = "^1.11.1"
isort = "^5.13.2"
flake8 = "^7.1.1"
ruff = "^0.6.0"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
